Adding iText library

--- a/PDFiller/PDFiller/_Imports.razor
+++ b/PDFiller/PDFiller/_Imports.razor
@@ -1,4 +1,5 @@
-﻿@using System.Net.Http
+﻿@using System.IO
+@using System.Net.Http
 @using System.Net.Http.Json
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
@@ -7,3 +8,7 @@
 @using Microsoft.JSInterop
 @using PDFiller
 @using PDFiller.Shared
+@using iText.Forms;
+@using iText.Forms.Fields;
+@using iText.Kernel.Pdf;
+@using iText.Layout;
