Adding sample form file. Improving organization of test PDF files. Fixing tests.

--- a/PDFiller/PDFiller/Pages/FetchData.razor
+++ b/PDFiller/PDFiller/Pages/FetchData.razor
@@ -64,7 +64,7 @@ else
 
         var pdfPlayground = new PDFiller.Domain.PdfPlayground();
 
-        var filledForm = pdfPlayground.ExportToPdf(formToFill);
+        var filledForm = pdfPlayground.FillUpFormAsMemoryStream(formToFill);
 
         await JS.SaveAs("FilledForm.pdf", filledForm.ToArray());
     }
