Adding functionality to fill the PDF form based on the value on the HTML form. HTML form fields and the model are hardcoded

--- a/PDFiller/PDFiller/Pages/FetchData.razor
+++ b/PDFiller/PDFiller/Pages/FetchData.razor
@@ -1,5 +1,6 @@
 @page "/fetchdata"
 @using PDFiller.PDFManipulation
+@using PDFiller.Services
 @inject HttpClient Http
 @inject Microsoft.JSInterop.IJSRuntime JS
 
