--- a/PDFiller/PDFiller/Pages/FetchData.razor
+++ b/PDFiller/PDFiller/Pages/FetchData.razor
@@ -1,5 +1,4 @@
 @page "/fetchdata"
-@using PDFiller.PDFManipulation
 @using PDFiller.Services
 @inject HttpClient Http
 @inject Microsoft.JSInterop.IJSRuntime JS
@@ -64,10 +63,10 @@ else
         var data = await Http.GetByteArrayAsync("sample-data/src.pdf");
         var formToFill = new MemoryStream(data);
 
-        var pdfPlayground = new PdfPlayground();
+        //var pdfPlayground = new PdfPlayground();
 
-        var filledForm = pdfPlayground.FillUpFormAsMemoryStream(formToFill);
+        //var filledForm = pdfPlayground.FillUpFormAsMemoryStream(formToFill);
 
-        await JS.SaveAs("FilledForm.pdf", filledForm.ToArray());
+        //await JS.SaveAs("FilledForm.pdf", filledForm.ToArray());
     }
 }
