--- a/PDFiller/PDFiller.Website/_Imports.razor
+++ b/PDFiller/PDFiller.Website/_Imports.razor
@@ -7,7 +7,7 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using PDFiller
-@using PDFiller.Shared
+@using PDFiller.Website.Shared
 @using iText.Forms;
 @using iText.Forms.Fields;
 @using iText.Kernel.Pdf;
