--- a/PDFiller/PDFiller.Website/Pages/HtmlForm.razor
+++ b/PDFiller/PDFiller.Website/Pages/HtmlForm.razor
@@ -3,19 +3,17 @@
 @inject HttpClient Http
 @inject IJSRuntime JS
 
-<EditForm Model="@_formModel" OnValidSubmit="ExportToPdf">
+<EditForm Model="@formModel" OnValidSubmit="ExportToPdf">
     <DataAnnotationsValidator />
     <ValidationSummary />
 
-    <InputText id="name" @bind-Value="_formModel.Name" />
-    
     <!--[FORM_FIELDS_PLACEHOLDER]-->
     
     <button type="submit">Submit</button>
 </EditForm>
 
 @code {
-    private readonly FormModel _formModel = new FormModel();
+    private readonly FormModel formModel = new FormModel();
 }
 
 
@@ -26,7 +24,7 @@
         var formToFill = new MemoryStream(data);
 
         var pdfFormFillingService = new PdfFormFillingService();
-        var filledForm = pdfFormFillingService.FillForm(formToFill, _formModel);
+        var filledForm = pdfFormFillingService.FillForm(formToFill, formModel);
 
         await JS.SaveAs("FilledForm.pdf", filledForm.ToArray());
     }
