--- a/PDFiller/PDFiller.Website/Pages/HtmlForm.razor
+++ b/PDFiller/PDFiller.Website/Pages/HtmlForm.razor
@@ -9,7 +9,7 @@
 
     <!--[FORM_FIELDS_PLACEHOLDER]-->
     
-    <button type="submit">Submit</button>
+    <button class="btn btn-primary" type="submit">Submit</button>
 </EditForm>
 
 @code {
