Creating extension method to populate values for string properties with their names

--- a/PDFiller/PDFiller.Website/Pages/HtmlForm.razor
+++ b/PDFiller/PDFiller.Website/Pages/HtmlForm.razor
@@ -13,7 +13,7 @@
 </EditForm>
 
 @code {
-    private readonly FormModel formModel = new FormModel();
+    private readonly FormModel formModel = new FormModel().SetPropertyValuesToPropertyNames();
 }
 
 
